--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,9 @@ Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+numpy==2.2.4
 orjson==3.10.16
+pandas==2.2.3
 pydantic==2.11.3
 pydantic-extra-types==2.10.3
 pydantic-settings==2.8.1
@@ -25,19 +27,23 @@ pydantic_core==2.33.1
 pydentic==0.0.1.dev3
 Pygments==2.19.1
 PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-multipart==0.0.20
 python-stdnum==1.20
+pytz==2025.2
 PyYAML==6.0.2
 rich==14.0.0
 rich-toolkit==0.14.1
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
 starlette==0.46.1
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
 ujson==5.10.0
 uvicorn==0.34.0
 uvloop==0.21.0
