--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ mdurl==0.1.2
 numpy==2.2.4
 orjson==3.10.16
 pandas==2.2.3
+passlib==1.7.4
 pydantic==2.11.3
 pydantic-extra-types==2.10.3
 pydantic-settings==2.8.1
