--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -32,6 +32,7 @@ Pygments==2.19.1
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-http-client==3.3.7
 python-jose==3.4.0
 python-multipart==0.0.20
 python-stdnum==1.20
@@ -41,10 +42,12 @@ regex==2024.11.6
 rich==14.0.0
 rich-toolkit==0.14.1
 rsa==4.9.1
+sendgrid==6.11.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
+starkbank-ecdsa==2.2.0
 starlette==0.46.1
 typer==0.15.2
 typing-inspection==0.4.0
