--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.9.0
 certifi==2025.1.31
 click==8.1.8
 dnspython==2.7.0
+ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
@@ -21,6 +22,7 @@ numpy==2.2.4
 orjson==3.10.16
 pandas==2.2.3
 passlib==1.7.4
+pyasn1==0.4.8
 pydantic==2.11.3
 pydantic-extra-types==2.10.3
 pydantic-settings==2.8.1
@@ -30,6 +32,8 @@ Pygments==2.19.1
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-http-client==3.3.7
+python-jose==3.4.0
 python-multipart==0.0.20
 python-stdnum==1.20
 pytz==2025.2
@@ -37,10 +41,13 @@ PyYAML==6.0.2
 regex==2024.11.6
 rich==14.0.0
 rich-toolkit==0.14.1
+rsa==4.9.1
+sendgrid==6.11.0
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
+starkbank-ecdsa==2.2.0
 starlette==0.46.1
 typer==0.15.2
 typing-inspection==0.4.0
